; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/ipc/extr_server.c_maybe_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/heimdal/lib/ipc/extr_server.c_maybe_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.client = type { i64, i32, i32, i32, i32 }

@WAITING_READ = common dso_local global i32 0, align 4
@WAITING_WRITE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.client*)* @maybe_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @maybe_close(%struct.client* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.client*, align 8
  store %struct.client* %0, %struct.client** %3, align 8
  %4 = load %struct.client*, %struct.client** %3, align 8
  %5 = getelementptr inbounds %struct.client, %struct.client* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %26

9:                                                ; preds = %1
  %10 = load %struct.client*, %struct.client** %3, align 8
  %11 = getelementptr inbounds %struct.client, %struct.client* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = load i32, i32* @WAITING_READ, align 4
  %14 = load i32, i32* @WAITING_WRITE, align 4
  %15 = or i32 %13, %14
  %16 = and i32 %12, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %9
  store i32 0, i32* %2, align 4
  br label %26

19:                                               ; preds = %9
  %20 = load %struct.client*, %struct.client** %3, align 8
  %21 = getelementptr inbounds %struct.client, %struct.client* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @close(i32 %22)
  %24 = load %struct.client*, %struct.client** %3, align 8
  %25 = call i32 @free(%struct.client* %24)
  store i32 1, i32* %2, align 4
  br label %26

26:                                               ; preds = %19, %18, %8
  %27 = load i32, i32* %2, align 4
  ret i32 %27
}

declare dso_local i32 @close(i32) #1

declare dso_local i32 @free(%struct.client*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
